--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -253,3 +253,44 @@ ul.todo#completed:after {
   font-size: 12px;
   color: #aaa;
 }
+
+/* Status Messages */
+.success{
+  width: 100%;
+  height: 80px;
+
+  position: fixed;
+  padding: 15px;
+  top: 0;
+  left: 0;
+  z-index: 6;
+
+  background: #56e856;
+  color: #fff;
+  font-size: large;
+  font-weight: 700;
+  letter-spacing: 2px;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.error{
+  width: 100%;
+  height: 80px;
+
+  position: fixed;
+  padding: 15px;
+  top: 0;
+  left: 0;
+  z-index: 6;
+
+  background: #e85656;
+  color: #fff;
+  font-size: large;
+  font-weight: 700;
+  letter-spacing: 2px;
+  box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
